--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -17,3 +17,14 @@
 	{% block headline-actions %}{% endblock %}
 </aside>
 {% endblock %}
+
+{% block content_out %}
+<article>
+    <header>
+        {% block headline %}{% endblock %}
+    </header>
+    <section class="article-content content-wrapper">
+        {% block content %}{% endblock %}
+    </section>
+</article>
+{% endblock %}
