--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -15,6 +15,11 @@
 {% block sidebar %}
 <aside class="sidebar sommaire mobile-menu-hide">
 	{% block headline-actions %}{% endblock %}
+	<h3><span class="wide">Télécharger</span></h3>
+    <ul class="sidebar-standalone mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Téléchargements">
+        <li><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></li>
+        <li><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></li>
+    </ul>
 </aside>
 {% endblock %}
 
