--- a/templates/tutorial/view_part_online.html
+++ b/templates/tutorial/view_part_online.html
@@ -7,7 +7,25 @@
 
 {% block headline %}
     Partie {{ part.position_in_tutorial }} : {{ part.title }}<br />
-    <small>{{ part.tutorial.title }}</small>
+    <h1 class="illu">
+        {{ part.title }}
+    </h1>
+    <ul class="taglist">
+    {% for category in part.tutorial.subcategory.all %}
+        <li><a href="#">{{ category.title }}</a></li>
+    {% endfor %}
+    </ul>
+    
+    <div class="authors content-wrapper">
+        <span class="authors-label">Auteurs : </span>
+        <ul>
+        {% for member in part.tutorial.authors.all %}
+            <li>
+                {% include "member/member_item_common.part.html" %}
+            </li>
+        {% endfor %}.
+        </ul>
+    </div>
 {% endblock %}
 
 {% block breadcrumb %}
@@ -31,9 +49,4 @@
     	{% include "tutorial/toc_common_online.html" %}
     {% endwith %}
     {% endwith %}
-    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions sur ce sujet">
-        <h3><span class="wide">Télécharger</span></h3>
-        <h4><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></h4>
-        <h4><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></h4>
-    </div>
 {% endblock %}
