--- a/templates/email/mp.html
+++ b/templates/email/mp.html
@@ -10,7 +10,7 @@ Bonjour <strong>{{username}}</strong>,
 <strong>{{author}}</strong> vous a envoyé un message privé sur ZesteDeSavoir.com
 <br />
 <br />
-Pour le lire, <a href="http://zestedesavoir.com{{url}}">cliquez ici</a>
+Pour le lire, <a href="{{url}}">cliquez ici</a>
 <br />
 <br />
 <br />
