add url for download markdown version

--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -17,6 +17,9 @@
 	{% block headline-actions %}{% endblock %}
 	<h3><span class="wide">Télécharger</span></h3>
     <ul class="sidebar-standalone mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Téléchargements">
+    	{% if perms.tutorial.change_tutorial %}
+    	<li><a href="{% url "zds.tutorial.views.download_markdown" %}?tutoriel={{ tutorial.pk }}">Markdown</a></li>
+    	{% endif %}
         <li><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></li>
         <li><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></li>
     </ul>
