Improve design for topic/tuto content, max-width

--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -335,8 +335,10 @@
                     }
                 }
 
-                img {
+                .avatar {
                     float: left;
+                    height: 30px;
+                    width: 30px;
                 }
                 .username {
                     display: block;
@@ -732,7 +734,19 @@
             position: absolute;
             margin: -6px 0 0 -60px;
             border: 1px solid #cdd0d1;
+            width: 50px;
+            height: 50px;
         }
+    }
+
+    .subtitle {
+        font-size: 15px;
+        font-size: 1.5rem;
+        color: #777;
+        margin-top: -15px;
+        margin-bottom: 30px;
+        padding: 10px 2%;
+        background: #EEE;
     }
 }
 .main.home .content-container {
@@ -875,7 +889,7 @@
 
         li {
             display: inline-block;
-            margin: 0 15px;
+            margin: 0 7px;
 
             .avatar {
                 height: 30px;
@@ -886,8 +900,19 @@
             }
 
             a {
+                display: block;
                 text-decoration: none;
                 color: #ee8709;
+                height: 36px;
+                line-height: 36px;
+                padding: 0 8px 0 2px;
+                @include transition;
+
+                &:hover,
+                &:focus {
+                    background: #DDD;
+                    color: #084561;
+                }
             }
         }
     }
@@ -905,7 +930,7 @@
     border-bottom: 1px solid #d2d5d6;
     background: #FBFBFB;
     height: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 20px !important;
 
     li {
         float: left;
@@ -936,20 +961,50 @@
             }
         }
     }
+
+    &.pagination-top {
+        li a.current {
+            margin-top: 0;
+            border-top: 3px solid #d2d5d6;
+            border-bottom: none;
+            height: 35px;
+            line-height: 35px;
+            padding-bottom: 3px;
+        }
+    }
 }
 
 
 /* ==============
     ALL: Main / Article, Tutorial, Forum message
    ============== */
-.main .content-container .article-content {
+.main .content-container .content-wrapper {
+    max-width: 960px;
+    margin: 0 auto;
+
+    &.article-content,
+    &.authors {
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+}
+.main .content-container .article-content,
+.main .content-container .message-content {
     margin-top: 20px;
     color: #424242;
 
     h2,
     h3 {
-        color: #ee8709;
-        margin-top: 40px;
+        &,
+        a {
+            color: #ee8709;
+            margin-top: 40px;
+            text-decoration: none;
+        }
+        a:hover,
+        a:focus {
+            text-decoration: underline;
+        }
     }
     h2 {
         font-size: 20px;
@@ -965,20 +1020,78 @@
         margin-bottom: 14px;
     }
 
-    .info {
-        background: #daeaee;
-        padding: 7px 1.5% 7px 3%;
-    }
-
-    .info,
-    .alert,
+    .information,
+    .question,
     .error,
     .warning {
+        margin: 25px 0;
+        padding: 7px 20px 7px 45px;
+
         &.ico-after:after {
             position: absolute;
             top: 50%;
-            left: 1.5%;
-            margin: -8px 0 0 -8px;
+            left: 23px;
+            margin: -11px 0 0 -11px;
+            height: 22px;
+            width: 22px;
+        }
+    }
+    .information {
+        background: #daeaee;
+
+        &.ico-after:after {
+            @include sprite-pos($sprite, 'information');
+        }
+    }
+    .question {
+        background: #e2daee;
+
+        &.ico-after:after {
+            @include sprite-pos($sprite, 'question');
+        }
+    }
+    .error {
+        background: #eedada;
+
+        &.ico-after:after {
+            @include sprite-pos($sprite, 'error');
+        }
+    }
+    .warning {
+        background: #eee7da;
+
+        &.ico-after:after {
+            @include sprite-pos($sprite, 'warning');
+        }
+    }
+
+    figure {
+        margin: 25px 0;
+        max-width: 100%;
+        padding: 10px;
+        background: #DDD;
+        text-align: center;
+
+        img,
+        video,
+        pre,
+        code {
+            max-width: 100%;
+        }
+
+        figcaption {
+            padding-top: 10px;
+        }
+    }
+
+    a {
+        color: #333;
+        @include transition;
+
+        &:hover,
+        &:focus {
+            color: #EE8709;
+            text-decoration: none;
         }
     }
 }
@@ -1305,6 +1418,9 @@ $helpful-background: #e9f9dc;
             }
         }
     }
+}
+form.forum-message {
+    margin-top: 50px;
 }
 
 
