--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -54,6 +54,7 @@ $sprite2x: sprite-map("sprite@2x/*.png");
 @import "base";
 
 @import "all-supports";
+@import "form";
 
 // Fluid layout
 @import "mobile";
