Remove useless action method in member/views.py to display all possible actions for a user.

--- a/templates/base.html
+++ b/templates/base.html
@@ -353,7 +353,7 @@
 
                             <div>
                                 {% with profile=user|profile %}
-                                <a href="{% url "zds.member.views.actions" %}" 
+                                <a href="#" 
                                    id="my-account"
                                    class="my-account mobile-menu-link mobile-menu-bloc dont-click-if-sidebar" 
                                    title="Mon compte" 
