Fixe bug to allow user to create an article.

--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -33,14 +33,14 @@
 {% block headline-actions %}
     <div class="button-group">
 
-        {% include "article/feeds.part.html" %}
-
-        {% if user.is_authenticated %}
-            <a href="{% url "zds.article.views.new" %}" class="button">
-                <i class="icon-plus"></i>
-                Nouvel article
-            </a>
-        {% endif %}
+        <a href="#" class="button secondary dropdown" data-dropdown="articles-drop-feeds">Flux</a><br />
+        <ul id="articles-drop-feeds" class="f-dropdown">
+            <li><a href="{% url "article-feed-rss" %}">Nouveaux articles (RSS)</a></li>
+            <li><a href="{% url "article-feed-atom" %}">Nouveaux articles (ATOM)</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="{% url "zds.article.views.new" %}">Nouvel article</a></li>
+            {% endif %}
+        </ul>
 
     </div>
 {% endblock %}
