--- a/templates/article/view.html
+++ b/templates/article/view.html
@@ -31,7 +31,7 @@
                 {% endfor %}
             </div>
             <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Informations">
-                <h3><span class="wide">Auteurs</span></h3>
+                <h3><span class="wide">Contributeurs</span></h3>
                 {% for author in authors.all %}
                         {% with profile=author|profile %}
                         <h4><a href="{{ author.get_absolute_url }}">{{ author.username }}</a></h4>
@@ -53,12 +53,7 @@
                 <h4><a href="{% url "zds.article.views.history" article.pk article.slug %}">Historique des versions</a></h4>
             </div>
 
-            {% if perms.article.change_article and article.sha_public = version %}
-            <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Informations">
-                <h3><span class="wide">Administration</span></h3>
-                <button type="submit" name="invalid-article">Confirmer la dépublication</button>
-            </div>
-            {% elif perms.article.change_article and article.sha_validation = version %}
+            {% if perms.article.change_article and article.sha_validation = version %}
             <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Informations">
                 <h3><span class="wide">Administration</span></h3>
                 <textarea name="comment-v" rows="3" placeholder="Vos commentaires de publication"> </textarea>
