--- a/templates/article/view_online.html
+++ b/templates/article/view_online.html
@@ -25,13 +25,20 @@
         {% endfor %}
     </div>
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Informations">
-        <h3><span class="wide">Auteurs</span></h3>
+        <h3><span class="wide">Contributeurs</span></h3>
         {% for author in authors.all %}
-                {% with profile=author|profile %}
-                <h4><a href="{{ author.get_absolute_url }}">{{ author.username }}</a></h4>
-                {% endwith %}
+            {% with profile=author|profile %}
+            <h4><a href="{{ author.get_absolute_url }}">{{ author.username }}</a></h4>
+            {% endwith %}
         {% endfor %}
     </div>
+
+    {% if perms.article.change_article and article.sha_public = version %}
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Informations">
+        <h3><span class="wide">Administration</span></h3>
+        <button type="submit" name="invalid-article">Confirmer la dépublication</button>
+    </div>
+    {% endif %}
 
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Télécharger">
         <h3><span class="wide">Télécharger</span></h3>
