Fixe bugs for user with action method.

--- a/templates/base.html
+++ b/templates/base.html
@@ -341,7 +341,7 @@
                                         {% endwith %}
                                     </div>
                                 {% else %}
-                                    <a href="{% url "zds.member.views.actions" %}"
+                                    <a href="#"
                                        id="open-my-account"
                                        class="ico-link dont-click-if-sidebar"
                                        data-click="my-account"
