--- a/templates/article/index_member.html
+++ b/templates/article/index_member.html
@@ -39,6 +39,10 @@
             <li><a href="{% url "article-feed-atom" %}">Nouveaux articles (ATOM)</a></li>
             {% if user.is_authenticated %}
             <li><a href="{% url "zds.article.views.new" %}">Nouvel article</a></li>
+            <h3><span class="wide">Filtres</span></h3>
+            <li><a href="{% url "zds.member.views.articles" %}">All</a></li>
+            <li><a href="{% url "zds.member.views.articles" %}?type=public">Public</a></li>
+            <li><a href="{% url "zds.member.views.articles" %}?type=draft">Draft</a><li>
             {% endif %}
         </ul>
 
@@ -49,7 +53,6 @@
 
 <div class="row">
     <div class="large-12 columns">
-        <a href="{% url "zds.member.views.articles" %}">All</a> - <a href="{% url "zds.member.views.articles" %}?type=public">Public</a> - <a href="{% url "zds.member.views.articles" %}?type=draft">Draft</a>
         {% if articles %}
             <div class="article-items">
                 {% for article in articles %}
@@ -60,10 +63,10 @@
                         {% endif %}
                     </div>
                     <div class="large-10 columns">
-                        {% if article.on_line %}
-                            <a href="{{ article.get_absolute_url_online }}">{{ article.title }}</a>
-                        {% else %}
+                        {% if type = 'draft' and article.is_draft %}
                             <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
+                        {% else %}
+                            <a href="{{ article.get_absolute_url_online }}">{{ article.title }}</a>
                         {% endif %}
                         <p>{{ article.description }}</p>
                     </div>
