Sidebar can be hidden. Issue #153

--- a/assets/css/scss/_form.scss
+++ b/assets/css/scss/_form.scss
@@ -27,7 +27,7 @@
         legend {
             padding: 0 10px;
             border-top: 1px solid #DDD;
-            border-bottom: 3px solid #FCFCFC;
+            border-bottom: 3px solid #DDD;
             background: #EFEFEF;
         }
     }
