--- a/assets/css/scss/_wide.scss
+++ b/assets/css/scss/_wide.scss
@@ -203,6 +203,14 @@
     /* ============
        Main
        ============ */
+    body.no-sidebar .main {
+        .content-container {
+            width: 100%;
+        }
+        .sidebar {
+            display: none;
+        }
+    }
 
     .main {
         @include display(flex);
