Add editor-js base style

--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -55,6 +55,7 @@ $sprite2x: sprite-map("sprite@2x/*.png");
 
 @import "all-supports";
 @import "form";
+@import "editor";
 
 // Fluid layout
 @import "mobile";
