--- a/assets/css/scss/_form.scss
+++ b/assets/css/scss/_form.scss
@@ -1,5 +1,5 @@
 /* ===== Zeste de Savoir ====================================================
-   Updated by: Alex-D / Alexandre Demode
+   Author: Alex-D / Alexandre Demode
    ---------------------------------
    Form style
    ========================================================================== */
