High pixel ratio icons bugfix

--- a/assets/css/scss/_high-pixel-ratio.scss
+++ b/assets/css/scss/_high-pixel-ratio.scss
@@ -55,6 +55,25 @@
     }
 
 
+
+    /* ==============
+        Markdown icons
+       ============== */
+    .information:after {
+        @include sprite-pos($sprite, 'information');
+    }
+    .question {
+        @include sprite-pos($sprite, 'question');
+    }
+    .error {
+        @include sprite-pos($sprite, 'error');
+    }
+    .warning {
+        @include sprite-pos($sprite, 'warning');
+    }
+
+
+
     /* ==============
         ALL: Icons
        ============== */
